<resources>
    <string name="app_name">ToDo</string>
    <string name="notes">Notes</string>
    <string name="dairy">Dairy</string>
    <string name="task">Task</string>
    <string name="expenses">Expenses</string>
    <string name="todo">ToDo</string>
    <string name="daily">Daily</string>
    <string name="enter_your_text">Enter your Text</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>