<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_design"
    android:layout_margin="5dp"
    >

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/enter_your_text"
        android:background="@drawable/edit_design"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textET"
        />
    <TextView
        android:layout_below="@+id/textET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round"
        android:text="@string/cancel"
        android:padding="10dp"
        android:layout_toStartOf="@+id/saveTV"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/cancelBtn"
        />

    <TextView
        android:layout_below="@+id/textET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round"
        android:text="@string/save"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/saveTV"
        />

</RelativeLayout>