<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/purple_500"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <TextView
            android:id="@+id/noteBtn"
            android:background="@drawable/btn_round"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:onClick="OnClick"
            />
        <TextView
            android:id="@+id/dailyBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_round"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dairy"
            android:onClick="OnClick"
            />
        <TextView
            android:id="@+id/taskBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_round"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:onClick="OnClick"
            />
        <TextView
            android:id="@+id/expensesBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_round"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:onClick="OnClick"
            />
    </LinearLayout>

</RelativeLayout>